tests/invalid/closure/unique_ref_capture.facet
fn bad<'a>(r: affine &'a mut unrestricted isize) -> unrestricted isize {
    let f = closure [r](x: unrestricted isize) -> unrestricted isize { (*r) } in
    (f 0)
}
